# wptprint

./: README.md  pyproject.toml
wptprint/: __init__.py  generate.py  update.py  utils.py
wptprint/static/: style.css
wptprint/templates/: _macros.jinja2  iframe.jinja2.html  index.jinja2.html  links.jinja2.html  render.jinja2.html  renderings.jinja2.html  status.jinja2.html  versions.jinja2.html
wptprint/tools/: _common.py  pagedjs.py  pdfreactor.py  prince.py  vivliostyle.py  weasyprint.py
