[project]
name = 'wptprint'
authors = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.7'
readme = {file = 'README.md', content-type = 'text/markdown'}
license = {file = 'LICENSE'}
version = '0.0.1'
dependencies = [
  'flask',
  'func-timeout',
  'nodeenv',
]

[tool.setuptools]
packages = []
